# i3rustus

./: .gitignore  Cargo.toml  LICENSE  README.md
packaging/: rust-i3rustus.spec
rpm/: i3rustus.spec
src/: config.rs  i3_status.rs  main.rs  utils.rs  widget_executor.rs  widgets.rs
src/netlink/: constants.rs  generic_netlink_header.rs  interface_address_message.rs  mod.rs  netlink_attribute.rs  netlink_header.rs
src/utils/: file.rs  json.rs  logger.rs  macros.rs  mod.rs  nm_dbus.rs  walking_vec.rs
src/widgets/: battery_life.rs  brightness.rs  cpu_stats.rs  disk_stats.rs  internet_connection.rs  memory_stats.rs  mod.rs  network_information.rs  time.rs
