[package]
name = "i3rustus"
authors = ["blinxen <h-k-81@hotmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
libc = "0.2"
dbus = "0.9"
actix = "0.13.0"
actix-rt = "2.8.0"
