[package]
name = "i3rustus"
authors = ["blinxen <h-k-81@hotmail.com>"]
version = "0.5.1"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["std"] }
libc = "0.2"
actix = "0.13"
actix-rt = "2"
tzif = "0.4.0"
